fixed buttons on mobile
- fixed button styling on mobile to not be blue

--- a/style.css
+++ b/style.css
@@ -190,6 +190,7 @@ button {
     text-align: left;
     flex: 1;
     transition: flex 250ms cubic-bezier(0,1.05,.89,1.09);
+    color: var(--dark);
 }
 button:hover {
     background-color: var(--light-accent);
